--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   profiles:
     include:
     - jdbc
+  datasource:
+    url: "jdbc:mariadb://localhost:3306/swtodo?autoReconnect=true&&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&tinyInt1isBit=false"
+    username: root
+    password: kimsw
       
 server:
   port: 8090
