--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,22 @@
 spring:
-  profiles:
-    include:
-    - jdbc
+  # config:
+  #   activate:
+  #     on-profile: application-jdbc
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: "jdbc:mariadb://localhost:3306/swtodo?autoReconnect=true&&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&tinyInt1isBit=false"
+    username: root
+    password: kimsw
+  jpa:
+    defer-datasource-initialization: true
+    open-in-view: false
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+
       
 server:
+  port: 8090
   servlet:
     encoding:
       force: false
