--- a/frontvue/package.json
+++ b/frontvue/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.28",
     "v3-infinite-loading": "^1.2.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
